ObsidiCode/gen/ObsidiCodeParser.java
// Generated from /home/ohshi/Workspace/P4/ObsidiCode/ObsidiCode.g4 by ANTLR 4.5.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ObsidiCodeParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, NumLit=30, CoordLit=31, 
		StringLit=32, COMMENT=33, EOLCOMMENT=34, WS=35, NEWLINE=36, NUM=37, STRING=38, 
		COORD=39, BOOL=40, VOID=41, LIST=42, EQ_MOD_IS=43, EQ_MOD_NOT=44, RELATIONAL_KEY_LT=45, 
		RELATIONAL_KEY_GT=46, RELATIONAL_KEY_LTE=47, RELATIONAL_KEY_GTE=48, OP_PLUS=49, 
		OP_MINUS=50, OP_MULT=51, OP_DIV=52, TRUE=53, FALSE=54, Identifier=55;
	public static final int
		RULE_prog = 0, RULE_loads = 1, RULE_literal = 2, RULE_typeName = 3, RULE_typePrefix = 4, 
		RULE_roboDcl = 5, RULE_roboBodyDcl = 6, RULE_memberDcl = 7, RULE_fieldDcl = 8, 
		RULE_variableDclList = 9, RULE_variableDcl = 10, RULE_variableInitializer = 11, 
		RULE_listInitializer = 12, RULE_litList = 13, RULE_methodDcl = 14, RULE_hearDcl = 15, 
		RULE_methodHeader = 16, RULE_methodDeclarator = 17, RULE_methodBody = 18, 
		RULE_block = 19, RULE_blockStmtList = 20, RULE_statement = 21, RULE_stmtNoSub = 22, 
		RULE_signalStmt = 23, RULE_exprStmt = 24, RULE_methodInvocation = 25, 
		RULE_ifStmt = 26, RULE_elseIfOpt = 27, RULE_elseOpt = 28, RULE_loopStmt = 29, 
		RULE_repeatStmt = 30, RULE_foreverStmt = 31, RULE_formalArgs = 32, RULE_argsList = 33, 
		RULE_formalParams = 34, RULE_paramsList = 35, RULE_param = 36, RULE_expression = 37, 
		RULE_assignmentExpression = 38, RULE_assignment = 39, RULE_leftHandSide = 40, 
		RULE_listOpt = 41, RULE_conditionalExpression = 42, RULE_conditionOrExpression = 43, 
		RULE_conditionAndExpression = 44, RULE_xOrExpression = 45, RULE_equalityExpression = 46, 
		RULE_equalityExpressionEnd = 47, RULE_relationalExpression = 48, RULE_relationalExpressionEnd = 49, 
		RULE_additiveExpression = 50, RULE_additiveExpressionEnd = 51, RULE_multiExpr = 52, 
		RULE_multiExprEnd = 53, RULE_unaryExpr = 54, RULE_primary = 55;
	public static final String[] ruleNames = {
		"prog", "loads", "literal", "typeName", "typePrefix", "roboDcl", "roboBodyDcl", 
		"memberDcl", "fieldDcl", "variableDclList", "variableDcl", "variableInitializer", 
		"listInitializer", "litList", "methodDcl", "hearDcl", "methodHeader", 
		"methodDeclarator", "methodBody", "block", "blockStmtList", "statement", 
		"stmtNoSub", "signalStmt", "exprStmt", "methodInvocation", "ifStmt", "elseIfOpt", 
		"elseOpt", "loopStmt", "repeatStmt", "foreverStmt", "formalArgs", "argsList", 
		"formalParams", "paramsList", "param", "expression", "assignmentExpression", 
		"assignment", "leftHandSide", "listOpt", "conditionalExpression", "conditionOrExpression", 
		"conditionAndExpression", "xOrExpression", "equalityExpression", "equalityExpressionEnd", 
		"relationalExpression", "relationalExpressionEnd", "additiveExpression", 
		"additiveExpressionEnd", "multiExpr", "multiExprEnd", "unaryExpr", "primary"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'LOAD'", "'('", "')'", "'.'", "':'", "','", "'='", "'END'", "'HEAR'", 
		"'END HEAR'", "'BREAK'", "'RETURN'", "'SIGNAL'", "'IF'", "'END IF'", "'ELSE IF'", 
		"'END ELSEIF'", "'ELSE'", "'END ELSE'", "'REPEAT UNTIL'", "'END REPEAT'", 
		"'FOREVER'", "'END FOREVER'", "'['", "']'", "'OR'", "'AND'", "'XOR'", 
		"'GREATER_THAN_EQUAL'", null, null, null, null, null, null, null, "'NUM'", 
		"'STRING'", "'COORD'", "'BOOL'", "'VOID'", "'LIST'", "'IS'", "'NOT'", 
		"'LESS_THAN'", "'GREATER_THAN'", "'LESS_THAN_EQUAL'", "'GREATHER_THAN_EQUAL'", 
		"'+'", "'-'", "'*'", "'/'", "'TRUE'", "'FALSE'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, "NumLit", "CoordLit", "StringLit", 
		"COMMENT", "EOLCOMMENT", "WS", "NEWLINE", "NUM", "STRING", "COORD", "BOOL", 
		"VOID", "LIST", "EQ_MOD_IS", "EQ_MOD_NOT", "RELATIONAL_KEY_LT", "RELATIONAL_KEY_GT", 
		"RELATIONAL_KEY_LTE", "RELATIONAL_KEY_GTE", "OP_PLUS", "OP_MINUS", "OP_MULT", 
		"OP_DIV", "TRUE", "FALSE", "Identifier"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ObsidiCode.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ObsidiCodeParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgContext extends ParserRuleContext {
		public RoboDclContext roboDcl() {
			return getRuleContext(RoboDclContext.class,0);
		}
		public LoadsContext loads() {
			return getRuleContext(LoadsContext.class,0);
		}
		public RoboBodyDclContext roboBodyDcl() {
			return getRuleContext(RoboBodyDclContext.class,0);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ObsidiCodeListener ) ((ObsidiCodeListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ObsidiCodeListener ) ((ObsidiCodeListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ObsidiCodeVisitor ) return ((ObsidiCodeVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			roboDcl();
			setState(113);
			loads(0);
			setState(114);
			roboBodyDcl(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LoadsContext extends ParserRuleContext {
		public LoadsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_loads; }
	 
		public LoadsContext() { }
		public void copyFrom(LoadsContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class LambdaLoadContext extends LoadsContext {
		public TerminalNode NEWLINE() { return getToken(ObsidiCodeParser.NEWLINE, 0); }
		public LambdaLoadContext(LoadsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ObsidiCodeListener ) ((ObsidiCodeListener)listener).enterLambdaLoad(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ObsidiCodeListener ) ((ObsidiCodeListener)listener).exitLambdaLoad(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ObsidiCodeVisitor ) return ((ObsidiCodeVisitor<? extends T>)visitor).visitLambdaLoad(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NonLambdaLoadContext extends LoadsContext {
		public LoadsContext recursion;
		public Token load_id;
		public TerminalNode NEWLINE() { return getToken(ObsidiCodeParser.NEWLINE, 0); }
		public LoadsContext loads() {
			return getRuleContext(LoadsContext.class,0);
		}
		public TerminalNode StringLit() { return getToken(ObsidiCodeParser.StringLit, 0); }
		public NonLambdaLoadContext(LoadsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ObsidiCodeListener ) ((ObsidiCodeListener)listener).enterNonLambdaLoad(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ObsidiCodeListener ) ((ObsidiCodeListener)listener).exitNonLambdaLoad(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ObsidiCodeVisitor ) return ((ObsidiCodeVisitor<? extends T>)visitor).visitNonLambdaLoad(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LoadsContext loads() throws RecognitionException {
		return loads(0);
	}

	private LoadsContext loads(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		LoadsContext _localctx = new LoadsContext(_ctx, _parentState);
		LoadsContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_loads, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				_localctx = new LambdaLoadContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				}
				break;
			case 2:
				{
				_localctx = new LambdaLoadContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(117);
				match(NEWLINE);
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(128);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new NonLambdaLoadContext(new LoadsContext(_parentctx, _parentState));
					((NonLambdaLoadContext)_localctx).recursion = _prevctx;
					pushNewRecursionContext(_localctx, _startState, RULE_loads);
					setState(120);
					if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
					setState(121);
					match(T__0);
					setState(122);
					match(T__1);
					setState(123);
					((NonLambdaLoadContext)_localctx).load_id = match(StringLit);
					setState(124);
					match(T__2);
					setState(125);
					match(NEWLINE);
					}
					} 
				}
				setState(130);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class LiteralContext extends ParserRuleContext {
		public TerminalNode NumLit() { return getToken(ObsidiCodeParser.NumLit, 0); }
		public TerminalNode CoordLit() { return getToken(ObsidiCodeParser.CoordLit, 0); }
		public TerminalNode StringLit() { return getToken(ObsidiCodeParser.StringLit, 0); }
		public LiteralContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_literal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ObsidiCodeListener ) ((ObsidiCodeListener)listener).enterLiteral(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ObsidiCodeListener ) ((ObsidiCodeListener)listener).exitLiteral(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ObsidiCodeVisitor ) return ((ObsidiCodeVisitor<? extends T>)visitor).visitLiteral(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LiteralContext literal() throws RecognitionException {
		LiteralContext _localctx = new LiteralContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_literal);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NumLit) | (1L << CoordLit) | (1L << StringLit) | (1L << TRUE) | (1L << FALSE))) != 0)) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeNameContext extends ParserRuleContext {
		public TypeNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeName; }
	 
		public TypeNameContext() { }
		public void copyFrom(TypeNameContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class TypeNameMethodInvocContext extends TypeNameContext {
		public TypeNameContext parent;
		public MethodInvocationContext meth;
		public TypeNameContext typeName() {
			return getRuleContext(TypeNameContext.class,0);
		}
		public MethodInvocationContext methodInvocation() {
			return getRuleContext(MethodInvocationContext.class,0);
		}
		public TypeNameMethodInvocContext(TypeNameContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ObsidiCodeListener ) ((ObsidiCodeListener)listener).enterTypeNameMethodInvoc(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ObsidiCodeListener ) ((ObsidiCodeListener)listener).exitTypeNameMethodInvoc(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ObsidiCodeVisitor ) return ((ObsidiCodeVisitor<? extends T>)visitor).visitTypeNameMethodInvoc(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class TypeNameIdentifierContext extends TypeNameContext {
		public TypeNameContext parent;
		public Token id;
		public TerminalNode Identifier() { return getToken(ObsidiCodeParser.Identifier, 0); }
		public TypeNameContext typeName() {
			return getRuleContext(TypeNameContext.class,0);
		}
		public TypeNameIdentifierContext(TypeNameContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ObsidiCodeListener ) ((ObsidiCodeListener)listener).enterTypeNameIdentifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ObsidiCodeListener ) ((ObsidiCodeListener)listener).exitTypeNameIdentifier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ObsidiCodeVisitor ) return ((ObsidiCodeVisitor<? extends T>)visitor).visitTypeNameIdentifier(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeNameContext typeName() throws RecognitionException {
		return typeName(0);
	}

	private TypeNameContext typeName(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		TypeNameContext _localctx = new TypeNameContext(_ctx, _parentState);
		TypeNameContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, 6, RULE_typeName, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			_localctx = new TypeNameIdentifierContext(_localctx);
			_ctx = _localctx;
			_prevctx = _localctx;

			setState(134);
			((TypeNameIdentifierContext)_localctx).id = match(Identifier);
			}
			_ctx.stop = _input.LT(-1);
			setState(144);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(142);
					switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
					case 1:
						{
						_localctx = new TypeNameIdentifierContext(new TypeNameContext(_parentctx, _parentState));
						((TypeNameIdentifierContext)_localctx).parent = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_typeName);
						setState(136);
						if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
						setState(137);
						match(T__3);
						setState(138);
						((TypeNameIdentifierContext)_localctx).id = match(Identifier);
						}
						break;
					case 2:
						{
						_localctx = new TypeNameMethodInvocContext(new TypeNameContext(_parentctx, _parentState));
						((TypeNameMethodInvocContext)_localctx).parent = _prevctx;
						pushNewRecursionContext(_localctx, _startState, RULE_typeName);
						setState(139);
						if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
						setState(140);
						match(T__3);
						setState(141);
						((TypeNameMethodInvocContext)_localctx).meth = methodInvocation();
						}
						break;
					}
					} 
				}
				setState(146);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class TypePrefixContext extends ParserRuleContext {
		public Token type;
		public TypePrefixContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typePrefix; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ObsidiCodeListener ) ((ObsidiCodeListener)listener).enterTypePrefix(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ObsidiCodeListener ) ((ObsidiCodeListener)listener).exitTypePrefix(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ObsidiCodeVisitor ) return ((ObsidiCodeVisitor<? extends T>)visitor).visitTypePrefix(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypePrefixContext typePrefix() throws RecognitionException {
		TypePrefixContext _localctx = new TypePrefixContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_typePrefix);
		try {
			setState(152);
			switch (_input.LA(1)) {
			case NUM:
				enterOuterAlt(_localctx, 1);
				{
				setState(147);
				((TypePrefixContext)_localctx).type = match(NUM);
				}
				break;
			case BOOL:
				enterOuterAlt(_localctx, 2);
				{
				setState(148);
				((TypePrefixContext)_localctx).type = match(BOOL);
				}
				break;
			case STRING:
				enterOuterAlt(_localctx, 3);
				{
				setState(149);
				((TypePrefixContext)_localctx).type = match(STRING);
				}
				break;
			case COORD:
				enterOuterAlt(_localctx, 4);
				{
				setState(150);
				((TypePrefixContext)_localctx).type = match(COORD);
				}
				break;
			case LIST:
				enterOuterAlt(_localctx, 5);
				{
				setState(151);
				((TypePrefixContext)_localctx).type = match(LIST);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RoboDclContext extends ParserRuleContext {
		public Token id;
		public TerminalNode NEWLINE() { return getToken(ObsidiCodeParser.NEWLINE, 0); }
		public TerminalNode Identifier() { return getToken(ObsidiCodeParser.Identifier, 0); }
		public RoboDclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_roboDcl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ObsidiCodeListener ) ((ObsidiCodeListener)listener).enterRoboDcl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ObsidiCodeListener ) ((ObsidiCodeListener)listener).exitRoboDcl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ObsidiCodeVisitor ) return ((ObsidiCodeVisitor<? extends T>)visitor).visitRoboDcl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RoboDclContext roboDcl() throws RecognitionException {
		RoboDclContext _localctx = new RoboDclContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_roboDcl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			((RoboDclContext)_localctx).id = match(Identifier);
			setState(155);
			match(T__4);
			setState(156);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RoboBodyDclContext extends ParserRuleContext {
		public RoboBodyDclContext recursion;
		public MemberDclContext dcl;
		public MemberDclContext memberDcl() {
			return getRuleContext(MemberDclContext.class,0);
		}
		public RoboBodyDclContext roboBodyDcl() {
			return getRuleContext(RoboBodyDclContext.class,0);
		}
		public RoboBodyDclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_roboBodyDcl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ObsidiCodeListener ) ((ObsidiCodeListener)listener).enterRoboBodyDcl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ObsidiCodeListener ) ((ObsidiCodeListener)listener).exitRoboBodyDcl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ObsidiCodeVisitor ) return ((ObsidiCodeVisitor<? extends T>)visitor).visitRoboBodyDcl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RoboBodyDclContext roboBodyDcl() throws RecognitionException {
		return roboBodyDcl(0);
	}
